objects/ssot__ProgramEnrollmentEligibilityCriteria__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnrollmentEligibilityCriteriaId__c</fullName>
        <label>Enrollment Eligibility Criteria</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Program Enrollment Eligibility Crit Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramId__c</fullName>
        <label>Program</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1722508688119_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramEnrollmentEligibilityCriteria_rel</label>
        <referenceTo>ssot__Program__dlm</referenceTo>
        <relationshipLabel>ProgramEnrollmentEligibilityCriteria_rel</relationshipLabel>
        <relationshipName>rel_1722508688119_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1722508695400_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramEnrollmentEligibilityCriteria_rel</label>
        <referenceTo>ssot__EnrollmentEligibilityCriteria__dlm</referenceTo>
        <relationshipLabel>ProgramEnrollmentEligibilityCriteria_rel</relationshipLabel>
        <relationshipName>rel_1722508695400_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>